# ElohimSMS

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
captcha_site_example/: index.html
postgres_data/: logfile  postgresql.conf  postmaster.opts  postmaster.pid
postgres_data/base/1/: 1259  (+25 more)
postgres_data/global/: 1213_vm  1261  1261_vm  1262  1262_vm  2396  2397  2671  2672  config_exec_params  pg_control  pg_internal.init
redirect_worker/: worker.js  wrangler.toml
rust_backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
rust_backend/migrations/: 001_init.sql  002_campaigns_templates.sql  003_minimal.sql  004_recreate_admin_features.sql  005_add_template_name.sql  006_add_provider_name.sql  007_add_webhook_callbacks.sql  008_add_sender_names.sql
rust_backend/src/: captcha.rs  config.rs  db.rs  error.rs  links.rs  main.rs  models.rs  openapi.rs  pagination.rs  phone.rs  state.rs  templates.rs
rust_backend/src/routes/: admin.rs  auth.rs  bot.rs  campaigns.rs  health.rs  keys.rs  links.rs  mod.rs  sms.rs  templates.rs  webhooks.rs
rust_backend/src/sms/: client.rs  config.rs  failover.rs  mod.rs  provider.rs
rust_backend/src/sms/providers/: devil_traff.rs  limitless_txt.rs  mod.rs  sky_telecom.rs  smsmobile_cc.rs
scripts/: start_postgres.sh  stop_postgres.sh
telegram_bot/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
telegram_bot/handlers/: admin.py  campaigns.py  common.py  internal.py  keys.py  sender_names.py  settings.py  sms.py  stats.py  templates.py
(+312 files in other folders)
